<resources>
    <!-- General -->
    <string name="app_name">MyDigimind</string>

    <!-- Titles -->
    <string name="title_home">My Board</string>
    <string name="title_add">New Reminder</string>

    <!-- Labels and Prompts -->
    <string name="reminder_name">What would you like to remember?</string>
    <string name="when">When would you like to do it?</string>
    <string name="time">At what time?</string>
    <string name="done">Done</string>

    <!-- Days of the Week (Shortened for Display) -->
    <string name="s">S</string> <!-- Sunday -->
    <string name="m">M</string> <!-- Monday -->
    <string name="t">T</string> <!-- Tuesday -->
    <string name="w">W</string> <!-- Wednesday -->
    <string name="th">Th</string> <!-- Thursday -->
    <string name="f">F</string> <!-- Friday -->
    <string name="sa">Sa</string> <!-- Saturday -->
</resources>
